--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nextron": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "windicss-webpack-plugin": "^1.7.4"
   }
 }
