--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
+    "apexcharts": "^3.35.3",
     "electron-serve": "^1.1.0",
     "electron-store": "^8.0.2",
+    "react-apexcharts": "^1.4.0",
     "react-icons": "^4.4.0"
   },
   "devDependencies": {
