--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -1,6 +1,6 @@
-appId: com.example.nextron
-productName: My Nextron App
-copyright: Copyright © 2018 Yoshihide Shiono
+appId: com.flla.dfy
+productName: D.fy
+copyright: Copyright © 2022 Fallah Andy Prakasa
 directories:
   output: dist
   buildResources: resources
